cube/cube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cube
  namespace: #namespace_name#
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: cube.mybento.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cube-api
            port:
              number: 4000
